src/EiffelParser.java
// Generated from D:/IdeaProjects/EiffelToJSONTranslator/ANTLR_files\Eiffel.g4 by ANTLR 4.x
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EiffelParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__1=1, T__0=2, COMMENT=3, WS=4, NEWLINE=5, CONSTR=6, T__23=7, END=8, 
		INDEXING=9, SEMI=10, COLON=11, COMMA=12, CLASS=13, DEFERRED=14, EXPANDED=15, 
		SEPARATE=16, SUB=17, GT=18, OBSOLETE=19, INHERIT=20, RENAME=21, AS=22, 
		EXPORT=23, ALL=24, LBRACE=25, RBRACE=26, REDEFINE=27, UNDEFINE=28, SELECT=29, 
		CREATE=30, FEATURE=31, IS=32, UNIQUE=33, FROZEN=34, PREFIX=35, T__12=36, 
		INFIX=37, NOT=38, ADD=39, MUL=40, DIV=41, LT=42, LE=43, GE=44, T__5=45, 
		T__6=46, CARET=47, AND_THEN=48, AND=49, OR=50, XOR=51, THEN=52, ELSE=53, 
		OR_ELSE=54, IMPLIES=55, LPAREN=56, RPAREN=57, DO=58, ONCE=59, EXTERNAL=60, 
		ALIAS=61, LOCAL=62, REQUIRE=63, ENSURE=64, INVARIANT=65, RESCUE=66, BIT=67, 
		LIKE=68, CURRENT=69, RESULT=70, CREATION=71, PRECURSOR=72, DOT=73, BANG=74, 
		T__8=75, IF=76, ELSEIF=77, INSPECT=78, WHEN=79, T__9=80, FROM=81, VARIANT=82, 
		LOOP=83, UNTIL=84, DEBUG=85, CHECK=86, RETRY=87, T__14=88, OLD=89, EQUAL=90, 
		NOT_EQUAL=91, TRUE=92, FALSE=93, T__15=94, T__16=95, STRIP=96, INTEGER=97, 
		MANIFEST_STRING=98, CHARACTER_CONSTANT=99, BIT_CONSTANT=100, REAL=101, 
		IDENTIFIER=102, CHARACTER=103, DECIMAL_DIGIT=104, LETTER=105, HEXADECIMAL_CONSTANT=106;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'['", "COMMENT", "WS", "'\n'", "'->'", "':='", "'end'", 
		"'indexing'", "';'", "':'", "','", "'class'", "'deferred'", "'expanded'", 
		"'separate'", "'-'", "'>'", "'obsolete'", "'inherit'", "'rename'", "'as'", 
		"'export'", "'all'", "'{'", "'}'", "'redefine'", "'undefine'", "'select'", 
		"'create'", "'feature'", "'is'", "'unique'", "'frozen'", "'prefix'", "'\"'", 
		"'infix'", "'not'", "'+'", "'*'", "'/'", "'<'", "'<='", "'>='", "'//'", 
		"'\\\\'", "'^'", "'and then'", "'and'", "'or'", "'xor'", "'then'", "'else'", 
		"'or else'", "'implies'", "'('", "')'", "'do'", "'once'", "'external'", 
		"'alias'", "'local'", "'require'", "'ensure'", "'invariant'", "'rescue'", 
		"'bit'", "'like'", "'Current'", "'Result'", "'creation'", "'Precursor'", 
		"'.'", "'!'", "'?='", "'if'", "'elseif'", "'inspect'", "'when'", "'..'", 
		"'from'", "'variant'", "'loop'", "'until'", "'debug'", "'check'", "'retry'", 
		"'$'", "'old'", "'='", "'/='", "'true'", "'false'", "'<<'", "'>>'", "'strip'", 
		"INTEGER", "MANIFEST_STRING", "CHARACTER_CONSTANT", "BIT_CONSTANT", "REAL", 
		"IDENTIFIER", "CHARACTER", "DECIMAL_DIGIT", "LETTER", "HEXADECIMAL_CONSTANT"
	};
	public static final int
		RULE_class_declaration = 0, RULE_indexing = 1, RULE_index_list = 2, RULE_index_clause = 3, 
		RULE_index = 4, RULE_index_terms = 5, RULE_index_value = 6, RULE_class_header = 7, 
		RULE_header_mark = 8, RULE_class_name = 9, RULE_formal_generics = 10, 
		RULE_formal_generic_list = 11, RULE_formal_generic = 12, RULE_formal_generic_name = 13, 
		RULE_constraint = 14, RULE_obsolete = 15, RULE_message = 16, RULE_inheritance = 17, 
		RULE_parent_list = 18, RULE_parent = 19, RULE_feature_adaptation = 20, 
		RULE_rename = 21, RULE_rename_list = 22, RULE_rename_pair = 23, RULE_new_exports = 24, 
		RULE_new_export_list = 25, RULE_new_export_item = 26, RULE_feature_set = 27, 
		RULE_feature_list = 28, RULE_clients = 29, RULE_class_list = 30, RULE_redefine = 31, 
		RULE_undefine = 32, RULE_select = 33, RULE_creators = 34, RULE_creation_clause = 35, 
		RULE_procedure_list = 36, RULE_procedure_name = 37, RULE_features = 38, 
		RULE_feature_clause = 39, RULE_feature_declaration_list = 40, RULE_feature_declaration = 41, 
		RULE_declaration_body = 42, RULE_constant_or_routine = 43, RULE_feature_value = 44, 
		RULE_new_feature_list = 45, RULE_new_feature = 46, RULE_feature_name = 47, 
		RULE_prefix = 48, RULE_infix = 49, RULE_prefix_operator = 50, RULE_infix_operator = 51, 
		RULE_unary = 52, RULE_binary = 53, RULE_formal_arguments = 54, RULE_entity_declaration_list = 55, 
		RULE_entity_declaration_group = 56, RULE_identifier_list = 57, RULE_type_mark = 58, 
		RULE_routine = 59, RULE_routine_body = 60, RULE_effective = 61, RULE_internal = 62, 
		RULE_routine_mark = 63, RULE_deferred = 64, RULE_external = 65, RULE_language_name = 66, 
		RULE_external_name = 67, RULE_local_declarations = 68, RULE_precondition = 69, 
		RULE_postcondition = 70, RULE_invariant = 71, RULE_assertion = 72, RULE_assertion_clause = 73, 
		RULE_unlabeled_assertion_clause = 74, RULE_tag_mark = 75, RULE_tag = 76, 
		RULE_rescue = 77, RULE_type = 78, RULE_class_type = 79, RULE_actual_generics = 80, 
		RULE_type_list = 81, RULE_class_type_expanded = 82, RULE_class_type_separate = 83, 
		RULE_bit_type = 84, RULE_bit_length = 85, RULE_anchored = 86, RULE_anchor = 87, 
		RULE_compound = 88, RULE_call_qualifier = 89, RULE_usual_call = 90, RULE_call_chain = 91, 
		RULE_params = 92, RULE_param = 93, RULE_call = 94, RULE_instruction = 95, 
		RULE_creation = 96, RULE_creation_call = 97, RULE_assignment = 98, RULE_assignment_attempt = 99, 
		RULE_conditional = 100, RULE_then_part_list = 101, RULE_then_part = 102, 
		RULE_else_part = 103, RULE_multi_branch = 104, RULE_when_part_list = 105, 
		RULE_when_part = 106, RULE_choices = 107, RULE_choice = 108, RULE_interval = 109, 
		RULE_choice_constant = 110, RULE_loop = 111, RULE_initialization = 112, 
		RULE_variant = 113, RULE_loop_body = 114, RULE_exit = 115, RULE_debug = 116, 
		RULE_debug_keys = 117, RULE_debug_key_list = 118, RULE_debug_key = 119, 
		RULE_check = 120, RULE_retry = 121, RULE_parent_qualification = 122, RULE_attribute = 123, 
		RULE_writable = 124, RULE_address = 125, RULE_address_mark = 126, RULE_expression = 127, 
		RULE_boolean_expression = 128, RULE_manifest_constant = 129, RULE_boolean_constant = 130, 
		RULE_integer_constant = 131, RULE_real_constant = 132, RULE_sign = 133, 
		RULE_wide_character_constant = 134, RULE_wide_manifest_string = 135, RULE_manifest_array = 136, 
		RULE_expression_list = 137, RULE_old = 138, RULE_strip = 139, RULE_attribute_list = 140;
	public static final String[] ruleNames = {
		"class_declaration", "indexing", "index_list", "index_clause", "index", 
		"index_terms", "index_value", "class_header", "header_mark", "class_name", 
		"formal_generics", "formal_generic_list", "formal_generic", "formal_generic_name", 
		"constraint", "obsolete", "message", "inheritance", "parent_list", "parent", 
		"feature_adaptation", "rename", "rename_list", "rename_pair", "new_exports", 
		"new_export_list", "new_export_item", "feature_set", "feature_list", "clients", 
		"class_list", "redefine", "undefine", "select", "creators", "creation_clause", 
		"procedure_list", "procedure_name", "features", "feature_clause", "feature_declaration_list", 
		"feature_declaration", "declaration_body", "constant_or_routine", "feature_value", 
		"new_feature_list", "new_feature", "feature_name", "prefix", "infix", 
		"prefix_operator", "infix_operator", "unary", "binary", "formal_arguments", 
		"entity_declaration_list", "entity_declaration_group", "identifier_list", 
		"type_mark", "routine", "routine_body", "effective", "internal", "routine_mark", 
		"deferred", "external", "language_name", "external_name", "local_declarations", 
		"precondition", "postcondition", "invariant", "assertion", "assertion_clause", 
		"unlabeled_assertion_clause", "tag_mark", "tag", "rescue", "type", "class_type", 
		"actual_generics", "type_list", "class_type_expanded", "class_type_separate", 
		"bit_type", "bit_length", "anchored", "anchor", "compound", "call_qualifier", 
		"usual_call", "call_chain", "params", "param", "call", "instruction", 
		"creation", "creation_call", "assignment", "assignment_attempt", "conditional", 
		"then_part_list", "then_part", "else_part", "multi_branch", "when_part_list", 
		"when_part", "choices", "choice", "interval", "choice_constant", "loop", 
		"initialization", "variant", "loop_body", "exit", "debug", "debug_keys", 
		"debug_key_list", "debug_key", "check", "retry", "parent_qualification", 
		"attribute", "writable", "address", "address_mark", "expression", "boolean_expression", 
		"manifest_constant", "boolean_constant", "integer_constant", "real_constant", 
		"sign", "wide_character_constant", "wide_manifest_string", "manifest_array", 
		"expression_list", "old", "strip", "attribute_list"
	};

	@Override
	public String getGrammarFileName() { return "Eiffel.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EiffelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Class_declarationContext extends ParserRuleContext {
		public InvariantContext invariant() {
			return getRuleContext(InvariantContext.class,0);
		}
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public CreatorsContext creators() {
			return getRuleContext(CreatorsContext.class,0);
		}
		public Formal_genericsContext formal_generics() {
			return getRuleContext(Formal_genericsContext.class,0);
		}
		public ObsoleteContext obsolete() {
			return getRuleContext(ObsoleteContext.class,0);
		}
		public IndexingContext indexing() {
			return getRuleContext(IndexingContext.class,0);
		}
		public InheritanceContext inheritance() {
			return getRuleContext(InheritanceContext.class,0);
		}
		public TerminalNode END() { return getToken(EiffelParser.END, 0); }
		public Class_headerContext class_header() {
			return getRuleContext(Class_headerContext.class,0);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EiffelVisitor ) return ((EiffelVisitor<? extends T>)visitor).visitClass_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(283);
			_la = _input.LA(1);
			if (_la==INDEXING) {
				{
				setState(282); indexing();
				}
			}

			setState(285); class_header();
			setState(287);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(286); formal_generics();
				}
			}

			setState(290);
			_la = _input.LA(1);
			if (_la==OBSOLETE) {
				{
				setState(289); obsolete();
				}
			}

			setState(293);
			_la = _input.LA(1);
			if (_la==INHERIT) {
				{
				setState(292); inheritance();
				}
			}

			setState(296);
			_la = _input.LA(1);
			if (_la==CREATE || _la==CREATION) {
				{
				setState(295); creators();
				}
			}

			setState(299);
			_la = _input.LA(1);
			if (_la==FEATURE) {
				{
				setState(298); features();
				}
			}

			setState(302);
			_la = _input.LA(1);
			if (_la==INVARIANT) {
				{
				setState(301); invariant();
				}
			}

			setState(304); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexingContext extends ParserRuleContext {
		public Index_listContext index_list() {
			return getRuleContext(Index_listContext.class,0);
		}
		public TerminalNode INDEXING() { return getToken(EiffelParser.INDEXING, 0); }
		public IndexingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indexing; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EiffelVisitor ) return ((EiffelVisitor<? extends T>)visitor).visitIndexing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IndexingContext indexing() throws RecognitionException {
		IndexingContext _localctx = new IndexingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_indexing);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(306); match(INDEXING);
			setState(307); index_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Index_listContext extends ParserRuleContext {
		public Index_clauseContext index_clause(int i) {
			return getRuleContext(Index_clauseContext.class,i);
		}
		public List<Index_clauseContext> index_clause() {
			return getRuleContexts(Index_clauseContext.class);
		}
		public Index_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EiffelVisitor ) return ((EiffelVisitor<? extends T>)visitor).visitIndex_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_listContext index_list() throws RecognitionException {
		Index_listContext _localctx = new Index_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_index_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(309); index_clause();
			setState(313);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUB || _la==ADD || ((((_la - 88)) & ~0x3f) == 0 && ((1L << (_la - 88)) & ((1L << (T__14 - 88)) | (1L << (TRUE - 88)) | (1L << (FALSE - 88)) | (1L << (INTEGER - 88)) | (1L << (MANIFEST_STRING - 88)) | (1L << (CHARACTER_CONSTANT - 88)) | (1L << (BIT_CONSTANT - 88)) | (1L << (REAL - 88)) | (1L << (IDENTIFIER - 88)) | (1L << (HEXADECIMAL_CONSTANT - 88)))) != 0)) {
				{
				{
				setState(310); index_clause();
				}
				}
				setState(315);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Index_clauseContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public Index_termsContext index_terms() {
			return getRuleContext(Index_termsContext.class,0);
		}
		public Index_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_clause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EiffelVisitor ) return ((EiffelVisitor<? extends T>)visitor).visitIndex_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_clauseContext index_clause() throws RecognitionException {
		Index_clauseContext _localctx = new Index_clauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_index_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(317);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(316); index();
				}
				break;
			}
			setState(319); index_terms();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(EiffelParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(EiffelParser.COLON, 0); }
		public IndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EiffelVisitor ) return ((EiffelVisitor<? extends T>)visitor).visitIndex(this);
			else return visitor.visitChildren(this);
		}
	}
